Admin Template to handle the flow of the app

--- a/iTicket-war/web/index.html
+++ b/iTicket-war/web/index.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Submit Tickets</a>
+              <a class="nav-link js-scroll-trigger" href="admin.html">Submit Tickets</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Check my Tickets</a>
