Templates and user Maintenance

--- a/iTicket-war/web/index.html
+++ b/iTicket-war/web/index.html
@@ -41,10 +41,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="admin.html">Submit Tickets</a>
+              <a class="nav-link js-scroll-trigger" href="faces/pages/catalogs/users/dashboard.xhtml">Submit Tickets</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Check my Tickets</a>
+                <a class="nav-link js-scroll-trigger" href="faces/pages/catalogs/users/dashboard.xhtml">Check my Tickets</a>
             </li>
           </ul>
         </div>
